--- a/app/src/main/res/layout/seek_bar_24_hour.xml
+++ b/app/src/main/res/layout/seek_bar_24_hour.xml
@@ -1,19 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <HorizontalScrollView
-        android:id="@+id/scroll_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:scrollbars="none">
-        <com.example.pavelprimak.customviewapp.customView.LineGraphView
-            android:id="@+id/line_graph_view"
+    <FrameLayout
+        android:id="@+id/scroll_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <com.example.pavelprimak.customviewapp.customView.CustomHorizontalScrollView
+            android:id="@+id/scroll_view"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-    </HorizontalScrollView>
+            android:layout_height="wrap_content"
+            android:scrollbars="none">
+
+            <com.example.pavelprimak.customviewapp.customView.LineGraphView
+                android:id="@+id/line_graph_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </com.example.pavelprimak.customviewapp.customView.CustomHorizontalScrollView>
+
+        <ImageView
+            android:id="@+id/cursor_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="7dp"
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/marker_center" />
+    </FrameLayout>
+
 
 </merge>
