--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -28,7 +28,6 @@
             <enum name="min" value="0" />
             <enum name="sec" value="1" />
         </attr>
-
     </declare-styleable>
 
 
@@ -39,6 +38,8 @@
         <attr name="Sb24hTextColor" format="color"/>
         <attr name="Sb24hTextSize" format="dimension"/>
         <attr name="Sb24hBorderHeight" format="dimension"/>
+        <attr name="Sb24hDivLineHeight" format="dimension"/>
+        <attr name="Sb24hDivLineWidth" format="dimension"/>
         <attr name="Sb24hState" format="enum">
             <enum name="enable" value="0" />
             <enum name="disable" value="1" />
@@ -47,6 +48,6 @@
             <enum name="min" value="0" />
             <enum name="sec" value="1" />
         </attr>
-
     </declare-styleable>
+
 </resources>
