GitHub init added git tag 1.0.1

--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -31,6 +31,7 @@
         app:Sb24hBackgroundColor="@android:color/holo_red_light"
         android:layout_width="match_parent"
         app:Sb24hBorderHeight="20dp"
+        app:Sb24hMinDivider="sec"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_height="wrap_content">
