--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -12,13 +12,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:sb24h_backgroundColor="@color/colorAccent"
-        app:sb24h_textColor="@color/colorPrimary"
         app:sb24h_divLineHeight="8dp"
         app:sb24h_mainEventColor="@color/colorPrimaryDark"
         app:sb24h_markEventColor="@android:color/darker_gray"
-        app:sb24h_borderHeight="40dp"
         app:sb24h_minDivider="min"
+        app:sb24h_textColor="@color/colorPrimary"
         app:sb24h_textFontFamilyName="her"
         app:sb24h_textSize="12dp" />
 
@@ -28,12 +29,13 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
+        android:layout_marginTop="10dp"
         app:sb24h_backgroundColor="@color/colorPrimary"
         app:sb24h_borderHeight="20dp"
         app:sb24h_textFontFamilyName="sans-serif-light"
         app:sb24h_textSize="10dp"
-        app:layout_constraintStart_toStartOf="@+id/seek_bar2"
-        app:layout_constraintTop_toBottomOf="@+id/seek_bar2"
+        app:layout_constraintStart_toStartOf="@+id/position_label2"
+        app:layout_constraintTop_toBottomOf="@+id/position_label2"
         app:sb24h_minDivider="sec" />
 
    <!-- android:fontFamily="sans-serif"           // roboto regular
@@ -82,7 +84,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="40dp"
         android:text="Start in Sec"
         app:layout_constraintStart_toStartOf="@+id/seek_bar"
         app:layout_constraintTop_toBottomOf="@+id/seek_bar" />
@@ -112,8 +114,25 @@
         app:layout_constraintBottom_toBottomOf="@+id/textView2"
         app:layout_constraintStart_toStartOf="@+id/event_type_spinner" />
 
+    <TextView
+        android:id="@+id/position_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:text="00:00:00"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/seek_bar" />
 
-
+    <TextView
+        android:id="@+id/position_label2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:text="00:00:00"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/seek_bar2" />
 
 
 </android.support.constraint.ConstraintLayout>
